# compile-sketches

./: action.yml  pyproject.toml  requirements.txt
compilesketches/: compilesketches.py
compilesketches/tests/: test_compilesketches.py
