[project]
name = "arduino_compile_sketches"
version = "1.1.2"
requires-python = "==3.12.4"
dependencies = [
    "GitPython==3.1.46",
    "PyGithub==2.8.1",
    "PyYAML==6.0.3",
    "semver==3.0.4",
]

[tool.black]
line-length = 120

[dependency-groups]
dev = [
    "black==26.1.0",
    "codespell==2.4.1",
    "coverage==7.13.4",
    "pytest==9.0.2",
    "pytest-mock==3.15.1",
    "flake8==7.3.0",
    "pep8-naming==0.15.1",
    "yamllint==1.38.0",
]
external = ["pyserial==3.5"]
pipx = ["poetry==2.3.2"]

[tool.uv]
package = false
default-groups = ["dev"]

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"
